[package]
name = "ranked-stats"
version = "0.1.0"
authors = ["Tumblewood"]
edition = "2024"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
num-derive = "^0.4"
num-traits = "^0.2"
base64 = "^0.21"

[[bin]]
name = "ranked-stats"
path = "src/main.rs"

[[bin]]
name = "collect-records"
path = "src/bin/collect_records.rs"

[[bin]]
name = "collect-player-records"
path = "src/bin/collect_player_records.rs"

[[bin]]
name = "collect-team-records"
path = "src/bin/collect_team_records.rs"

[[bin]]
name = "collect-cap-runs-and-comebacks"
path = "src/bin/collect_cap_runs_and_comebacks.rs"